# blenderproc_yolo_db_generator

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
configs/: config_schema.json  euro_box_config.json  example_config.json  example_obb_config.json  minimal_texture_test.json  probe_test_config.json
docs/: API.md  PERFORMANCE.md  TEXTURE_OPTIONS.md  USER_GUIDE.md  WIKI.md
models/: .gitkeep
scripts/: download_texture_subset.py  visualize_model.py
src/: bbox_extractor.py  config_parser.py  dataset_manager.py  errors.py  generate_dataset.py  logger.py  object_loader.py  randomization.py  scene_generator.py  yolo_converter.py
tests/: test_config_parser.py  test_dataset_manager.py  test_integration.py  test_obb_validation.py  test_object_loader.py  test_yolo_converter.py
